[gd_scene load_steps=111 format=2]

[ext_resource path="res://Intro.gd" type="Script" id=1]
[ext_resource path="res://fondo perso.png" type="Texture" id=2]
[ext_resource path="res://perso.png" type="Texture" id=3]
[ext_resource path="res://sounds/animacion2.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/pantalla2.ogg" type="AudioStream" id=5]
[ext_resource path="res://pantalla/Comp 1_00000.jpg" type="Texture" id=6]
[ext_resource path="res://pantalla/Comp 1_00001.jpg" type="Texture" id=7]
[ext_resource path="res://pantalla/Comp 1_00002.jpg" type="Texture" id=8]
[ext_resource path="res://pantalla/Comp 1_00003.jpg" type="Texture" id=9]
[ext_resource path="res://pantalla/Comp 1_00004.jpg" type="Texture" id=10]
[ext_resource path="res://pantalla/Comp 1_00005.jpg" type="Texture" id=11]
[ext_resource path="res://pantalla/Comp 1_00006.jpg" type="Texture" id=12]
[ext_resource path="res://pantalla/Comp 1_00007.jpg" type="Texture" id=13]
[ext_resource path="res://pantalla/Comp 1_00008.jpg" type="Texture" id=14]
[ext_resource path="res://pantalla/Comp 1_00009.jpg" type="Texture" id=15]
[ext_resource path="res://pantalla/Comp 1_00010.jpg" type="Texture" id=16]
[ext_resource path="res://pantalla/Comp 1_00011.jpg" type="Texture" id=17]
[ext_resource path="res://pantalla/Comp 1_00012.jpg" type="Texture" id=18]
[ext_resource path="res://pantalla/Comp 1_00013.jpg" type="Texture" id=19]
[ext_resource path="res://pantalla/Comp 1_00014.jpg" type="Texture" id=20]
[ext_resource path="res://pantalla/Comp 1_00015.jpg" type="Texture" id=21]
[ext_resource path="res://pantalla/Comp 1_00016.jpg" type="Texture" id=22]
[ext_resource path="res://pantalla/Comp 1_00017.jpg" type="Texture" id=23]
[ext_resource path="res://pantalla/Comp 1_00018.jpg" type="Texture" id=24]
[ext_resource path="res://pantalla/Comp 1_00019.jpg" type="Texture" id=25]
[ext_resource path="res://pantalla/Comp 1_00020.jpg" type="Texture" id=26]
[ext_resource path="res://pantalla/Comp 1_00021.jpg" type="Texture" id=27]
[ext_resource path="res://pantalla/Comp 1_00022.jpg" type="Texture" id=28]
[ext_resource path="res://pantalla/Comp 1_00023.jpg" type="Texture" id=29]
[ext_resource path="res://pantalla/Comp 1_00024.jpg" type="Texture" id=30]
[ext_resource path="res://pantalla/Comp 1_00025.jpg" type="Texture" id=31]
[ext_resource path="res://pantalla/Comp 1_00026.jpg" type="Texture" id=32]
[ext_resource path="res://pantalla/Comp 1_00027.jpg" type="Texture" id=33]
[ext_resource path="res://pantalla/Comp 1_00028.jpg" type="Texture" id=34]
[ext_resource path="res://pantalla/Comp 1_00029.jpg" type="Texture" id=35]
[ext_resource path="res://pantalla/Comp 1_00030.jpg" type="Texture" id=36]
[ext_resource path="res://pantalla/Comp 1_00031.jpg" type="Texture" id=37]
[ext_resource path="res://pantalla/Comp 1_00032.jpg" type="Texture" id=38]
[ext_resource path="res://pantalla/Comp 1_00033.jpg" type="Texture" id=39]
[ext_resource path="res://pantalla/Comp 1_00034.jpg" type="Texture" id=40]
[ext_resource path="res://pantalla/Comp 1_00035.jpg" type="Texture" id=41]
[ext_resource path="res://pantalla/Comp 1_00036.jpg" type="Texture" id=42]
[ext_resource path="res://pantalla/Comp 1_00037.jpg" type="Texture" id=43]
[ext_resource path="res://pantalla/Comp 1_00038.jpg" type="Texture" id=44]
[ext_resource path="res://pantalla/Comp 1_00039.jpg" type="Texture" id=45]
[ext_resource path="res://pantalla/Comp 1_00040.jpg" type="Texture" id=46]
[ext_resource path="res://pantalla/Comp 1_00041.jpg" type="Texture" id=47]
[ext_resource path="res://pantalla/Comp 1_00042.jpg" type="Texture" id=48]
[ext_resource path="res://pantalla/Comp 1_00043.jpg" type="Texture" id=49]
[ext_resource path="res://pantalla/Comp 1_00044.jpg" type="Texture" id=50]
[ext_resource path="res://pantalla/Comp 1_00045.jpg" type="Texture" id=51]
[ext_resource path="res://pantalla/Comp 1_00046.jpg" type="Texture" id=52]
[ext_resource path="res://pantalla/Comp 1_00047.jpg" type="Texture" id=53]
[ext_resource path="res://pantalla/Comp 1_00048.jpg" type="Texture" id=54]
[ext_resource path="res://pantalla/Comp 1_00049.jpg" type="Texture" id=55]
[ext_resource path="res://pantalla/Comp 1_00050.jpg" type="Texture" id=56]
[ext_resource path="res://pantalla/Comp 1_00051.jpg" type="Texture" id=57]
[ext_resource path="res://pantalla/Comp 1_00052.jpg" type="Texture" id=58]
[ext_resource path="res://pantalla/Comp 1_00053.jpg" type="Texture" id=59]
[ext_resource path="res://pantalla/Comp 1_00054.jpg" type="Texture" id=60]
[ext_resource path="res://pantalla/Comp 1_00055.jpg" type="Texture" id=61]
[ext_resource path="res://pantalla/Comp 1_00056.jpg" type="Texture" id=62]
[ext_resource path="res://pantalla/Comp 1_00057.jpg" type="Texture" id=63]
[ext_resource path="res://pantalla/Comp 1_00058.jpg" type="Texture" id=64]
[ext_resource path="res://pantalla/Comp 1_00059.jpg" type="Texture" id=65]
[ext_resource path="res://pantalla/Comp 1_00060.jpg" type="Texture" id=66]
[ext_resource path="res://pantalla/Comp 1_00061.jpg" type="Texture" id=67]
[ext_resource path="res://pantalla/Comp 1_00062.jpg" type="Texture" id=68]
[ext_resource path="res://pantalla/Comp 1_00063.jpg" type="Texture" id=69]
[ext_resource path="res://pantalla/Comp 1_00064.jpg" type="Texture" id=70]
[ext_resource path="res://pantalla/Comp 1_00065.jpg" type="Texture" id=71]
[ext_resource path="res://pantalla/Comp 1_00066.jpg" type="Texture" id=72]
[ext_resource path="res://pantalla/Comp 1_00067.jpg" type="Texture" id=73]
[ext_resource path="res://pantalla/Comp 1_00068.jpg" type="Texture" id=74]
[ext_resource path="res://pantalla/Comp 1_00069.jpg" type="Texture" id=75]
[ext_resource path="res://light.png" type="Texture" id=76]
[ext_resource path="res://KRAKOVA-01.png" type="Texture" id=77]
[ext_resource path="res://creditos/Comp 2_00000.png" type="Texture" id=78]
[ext_resource path="res://creditos/Comp 2_00001.png" type="Texture" id=79]
[ext_resource path="res://creditos/Comp 2_00002.png" type="Texture" id=80]
[ext_resource path="res://creditos/Comp 2_00003.png" type="Texture" id=81]
[ext_resource path="res://creditos/Comp 2_00004.png" type="Texture" id=82]
[ext_resource path="res://creditos/Comp 2_00005.png" type="Texture" id=83]
[ext_resource path="res://creditos/Comp 2_00006.png" type="Texture" id=84]
[ext_resource path="res://creditos/Comp 2_00007.png" type="Texture" id=85]
[ext_resource path="res://creditos/Comp 2_00008.png" type="Texture" id=86]
[ext_resource path="res://creditos/Comp 2_00009.png" type="Texture" id=87]
[ext_resource path="res://creditos/Comp 2_00010.png" type="Texture" id=88]
[ext_resource path="res://creditos/Comp 2_00011.png" type="Texture" id=89]
[ext_resource path="res://creditos/Comp 2_00012.png" type="Texture" id=90]
[ext_resource path="res://creditos/Comp 2_00013.png" type="Texture" id=91]
[ext_resource path="res://creditos/Comp 2_00014.png" type="Texture" id=92]
[ext_resource path="res://creditos/Comp 2_00015.png" type="Texture" id=93]
[ext_resource path="res://creditos/Comp 2_00016.png" type="Texture" id=94]
[ext_resource path="res://creditos/Comp 2_00017.png" type="Texture" id=95]
[ext_resource path="res://creditos/Comp 2_00018.png" type="Texture" id=96]
[ext_resource path="res://creditos/Comp 2_00019.png" type="Texture" id=97]
[ext_resource path="res://creditos/Comp 2_00020.png" type="Texture" id=98]
[ext_resource path="res://creditos/Comp 2_00021.png" type="Texture" id=99]
[ext_resource path="res://creditos/Comp 2_00022.png" type="Texture" id=100]
[ext_resource path="res://creditos/Comp 2_00023.png" type="Texture" id=101]
[ext_resource path="res://creditos/Comp 2_00024.png" type="Texture" id=102]
[ext_resource path="res://creditos/Comp 2_00025.png" type="Texture" id=103]
[ext_resource path="res://creditos/Comp 2_00026.png" type="Texture" id=104]
[ext_resource path="res://creditos/Comp 2_00027.png" type="Texture" id=105]
[ext_resource path="res://creditos/Comp 2_00028.png" type="Texture" id=106]
[ext_resource path="res://creditos/Comp 2_00029.png" type="Texture" id=107]

[sub_resource type="Animation" id=1]
resource_name = "Animintro"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("Personaje:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5, 1, 1.5, 2, 2.4, 2.9, 3.4, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 50, 0 ), Vector2( 0, 0 ), Vector2( -50, 0 ), Vector2( 0, 0 ), Vector2( 50, 0 ), Vector2( 0, 0 ), Vector2( -50, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Personaje:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4.1, 4.6, 5.7, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.5, 0.5 ), Vector2( 0.6, 0.6 ), Vector2( 0.6, 0.6 ), Vector2( 3, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Personaje:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4.1, 4.6, 5.7, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 3.13834 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -300 ), Vector2( 0, -300 ), Vector2( 0, 250 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sirena:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -0.1, 3.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Personaje:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( -0.1, 0.5, 1, 1.5, 2, 2.4, 2.9, 3.4, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0, 0.0, -3.0, 0.0, 3.0, 0.0, -3.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PantallaInicio:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 6.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PantallaInicio:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( -0.1, 6.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Light2D:enabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( -0.1, 4.5, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( -0.1, 6.3, 6.4, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ false, false, true, false ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Intro" type="Node2D"]
position = Vector2( 738.257, 418.258 )
scale = Vector2( 1.32, 1.4 )
script = ExtResource( 1 )

[node name="FondoPersonaje" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Personaje" type="Sprite" parent="."]
position = Vector2( -148.621, 226.162 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
offset = Vector2( 0, 250 )

[node name="Radiacion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Sirena" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Animintro = SubResource( 1 )

[node name="PantallaInicio" type="AnimatedSprite" parent="."]
position = Vector2( -21.4796, 0 )
scale = Vector2( 1.15, 1.15 )
frames = SubResource( 2 )
frame = 39
speed_scale = 5.0
playing = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -1.43195, 340.81 )
enabled = false
texture = ExtResource( 76 )
color = Color( 0.203922, 0.788235, 0.0156863, 1 )
energy = 2.0

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 19.4802, -103.245 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 77 )

[node name="Creditos" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 3 )
frame = 27
speed_scale = 2.0

[node name="Button" type="Button" parent="."]
margin_left = -167.632
margin_top = 47.0
margin_right = -155.632
margin_bottom = 67.0
rect_scale = Vector2( 30.04, 3.44 )
flat = true
clip_text = true

[node name="Button2" type="Button" parent="."]
margin_left = -173.632
margin_top = 116.0
margin_right = -161.632
margin_bottom = 136.0
rect_scale = Vector2( 30.04, 3.24 )
flat = true
clip_text = true

[node name="Button3" type="Button" parent="."]
margin_left = -168.632
margin_top = 183.0
margin_right = -156.632
margin_bottom = 203.0
rect_scale = Vector2( 30.04, 3.44 )
flat = true
clip_text = true

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = -683.954
margin_top = -443.414
margin_right = -671.954
margin_bottom = -423.414
rect_scale = Vector2( 109.797, 42.7661 )
flat = true
clip_text = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
